[gd_scene load_steps=5 format=1]

[ext_resource path="res://src/start/settings.gd" type="Script" id=1]
[ext_resource path="res://art/fonts/exo2.fnt" type="BitmapFont" id=2]
[ext_resource path="res://art/sprites/hud_gamepad.png" type="Texture" id=3]
[ext_resource path="res://art/sprites/hud_gamepad_slider.png" type="Texture" id=4]

[node name="settings" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 491.0
margin/bottom = 488.0

[node name="cb_dpad" type="CheckBox" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 67.0
margin/top = 119.0
margin/right = 396.0
margin/bottom = 255.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_pressed = Color( 0.167969, 1, 0.551483, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "   D-Pad"
icon = ExtResource( 3 )
flat = false
align = 0

[node name="cb_slider" type="CheckBox" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 270.0
margin/right = 382.0
margin/bottom = 439.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_pressed = Color( 0.164706, 1, 0.54902, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = " Slider"
icon = ExtResource( 4 )
flat = false
align = 0

[node name="Label" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 114.0
margin/top = 31.0
margin/right = 408.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "Control Style"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="panel/cb_dpad" to="." method="_on_cb_dpad_pressed"]

[connection signal="pressed" from="panel/cb_slider" to="." method="_on_cb_slider_pressed"]


